# KingshotScheduleMaker

./: .gitignore  DEPLOYMENT.md  PowerLevel.rs  README.md
power-level-recording/: Cargo.toml
power-level-recording/src/: main.rs
prep-appointments/: Cargo.toml  README.md  schedule_construction.txt  schedule_research.txt  schedule_troops.txt
prep-appointments/data/: testData2.csv  uploaded_data.csv
prep-appointments/src/: display.rs  main.rs  parser.rs  web.rs
prep-appointments/src/form/: export.rs  mod.rs  submission.rs
prep-appointments/src/schedule/: construction.rs  generic.rs  mod.rs  move_chain.rs  research.rs  slot_utils.rs  troops.rs  types.rs
prep-appointments/static/: style.css
prep-appointments/templates/: admin.html  create_account.html  dashboard.html  form.html  form_stats.html  index.html  schedules.html  servers_list.html  stats.html  view_schedule.html
