[package]
name = "prep-appointments"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.4"
actix-files = "0.6"
actix-session = { version = "0.8", features = ["cookie-session"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
rand = "0.8"

